--- a/School_Management/views/createrecord_view.xml
+++ b/School_Management/views/createrecord_view.xml
@@ -108,6 +108,7 @@
                     <field name ="invoice_description"/>
                     <field name ="project_description"/>
                     <field name ="task_description"/>
+                    <field name = "purchase_description"/>
                 </xpath>
             </field>
         </record>
@@ -185,6 +186,20 @@
             <field name="arch" type="xml">
                 <xpath expr="/form/sheet/group/group/field[@name='date_deadline']" position="after">
                     <field name ="task_description"/>
+                </xpath>
+            </field>
+        </record>
+    </data>
+
+
+    <data>
+    <record id="purchase_order_inherit_form" model="ir.ui.view">
+            <field name="name">Purchase Order Form</field>
+            <field name="model">purchase.order</field>
+            <field name= "inherit_id" ref= "purchase.purchase_order_form" />
+            <field name="arch" type="xml">
+                <xpath expr="/form/sheet/group/group/field[@name='partner_id']" position="after">
+                    <field name ="purchase_description"/>
                 </xpath>
             </field>
         </record>
