--- a/School_Management/views/createrecord_view.xml
+++ b/School_Management/views/createrecord_view.xml
@@ -109,6 +109,7 @@
                     <field name ="project_description"/>
                     <field name ="task_description"/>
                     <field name = "purchase_description"/>
+                    <field name = "manufacturing_description" />
                 </xpath>
             </field>
         </record>
@@ -199,7 +200,20 @@
             <field name= "inherit_id" ref= "purchase.purchase_order_form" />
             <field name="arch" type="xml">
                 <xpath expr="/form/sheet/group/group/field[@name='partner_id']" position="after">
-                    <field name ="purchase_description"/>
+                    <field name="purchase_des"/>
+                </xpath>
+            </field>
+        </record>
+    </data>
+
+    <data>
+    <record id="manufacturing_inherit_form" model="ir.ui.view">
+            <field name="name">Manufacturing Order Form</field>
+            <field name="model">mrp.production</field>
+            <field name= "inherit_id" ref= "mrp.mrp_production_form_view" />
+            <field name="arch" type="xml">
+                <xpath expr="/form/sheet/group/group/field[@name='product_id']" position="after">
+                    <field name="manufacturing_description"/>
                 </xpath>
             </field>
         </record>
