[ADD][T00309]School-Added wizard that create record and show in assignment.option model's form view

--- a/School_Management/views/Studycorner_view.xml
+++ b/School_Management/views/Studycorner_view.xml
@@ -89,8 +89,8 @@
                                 <field name = "department" />
                                 <field name = "gender" />
                             </group>
-                            <gruop>
-                            </gruop>
+                            <group>
+                            </group>
                         <notebook>
                             <page string="subject">
                                 <group>
