[ADD][T00309]school-added cronjob in assignment model and student model

--- a/school_management/views/details_view.xml
+++ b/school_management/views/details_view.xml
@@ -322,7 +322,8 @@
                             <field name ="marksheetcount" />
                             <field name ="feescount" />
                             <field name = "subject_id" />
-                             <field name = "dob" />
+                            <field name = "dob"/>
+                            <field name = "message" readonly='1'/>
                             <field name = "phone" widget="phone"/>
                             <field name = "gender" />
                             <field name = "totalmarks" />
