--- a/school_management/views/studycorner_view.xml
+++ b/school_management/views/studycorner_view.xml
@@ -89,6 +89,7 @@
                                 <field name = "teachername_id"/>
                                 <field name = "department_id" />
                                 <field name = "gender" />
+                                <field name = "alert_message" readonly = "1"/>
                             </group>
                             <group>
                             </group>
@@ -105,7 +106,7 @@
                             <page string="submission">
                                 <group>
                                     <field name = "duedate" />
-                                    <field name = "today" widget="badge" />
+                                    <field name = "today" readonly="1" />
                                     <field name = "Task" />
                                     <field name = "submit" widget="boolean_toggle" groups="school_management.group_school_teacher" />
                                     <field name = "submit_student_side" widget="boolean_toggle"/>
@@ -162,7 +163,7 @@
         <field name="arch" type="xml">
             <form>
                 <header>
-                    <button name= "action_confirm" type= "object" string="submit" class="oe_highlight"/>
+                    <button name= "action_confirm" type= "object" string="submit" class="oe_highlight" attrs="{'invisible': [('disable_button', '=', True)]}"/>
                     <button name= "action_cancel" type= "object" string="cancel" class="oe_highlight" groups="school_management.group_school_teacher"/>
                     <button name= "action_confirm_admission" type= "object" string="confirm admission" class="oe_highlight" groups="school_management.group_school_teacher"/>
                     <field name="state" widget="statusbar" />
@@ -171,6 +172,7 @@
                     <widget name="web_ribbon" text="Addmission Form" bg_color="bg-primary" />
                     <group>
                         <group>
+                            <field name = "disable_button" invisible="1"/>
                             <field name = "name" placeholder="Your Name" style="font-size:13pt;" />
                             <field name = "address" />
                             <field name ="pincode" options="{'format': 0}" />
@@ -381,16 +383,5 @@
             </form>
         </field>
     </record>
-
-    <!--  <data>
-        <record id="fees_structure_sequence" model="ir.sequence">
-            <field name="name">Fees Option</field>
-            <field name="code">fees.option</field>
-            <field name="prefix">REC</field>
-            <field name="padding">3</field>
-            <field name="company_id" eval="False"/>
-        </record>
-    </data>
- -->
 
 </odoo>
