--- a/school_management/views/create_record_view.xml
+++ b/school_management/views/create_record_view.xml
@@ -102,8 +102,8 @@
                     <field name="delivery_description"/>
                 </xpath>
                 <xpath expr="/form/sheet/notebook/page/field[@name='move_ids_without_package']/tree/field[@name='product_id']" position="after">
-                    <field name="weight_done_new"/>
-                    <field name= "weight" attrs="{'readonly': [('state','=','done')]}"/>
+                    <field name="weight_done_new" attrs="{'invisible':[('weight_done_new','=',False)]}"/>
+                    <field name= "weight" attrs="{'readonly': [('state','=','done')],'invisible':[('weight_done_new','=',False)]}"/>
                 </xpath>
             </field>
         </record>
@@ -119,7 +119,7 @@
                 </xpath>
             </field>
         </record>
- -->
+    -->
 
     <data>
         <record id="invoice_inherit_form" model="ir.ui.view">
