[ADD][T00309]school-add functionality to create invoice through validate button in stock-picking if boolean value is True in stock-picking-type

--- a/school_management/views/create_record_view.xml
+++ b/school_management/views/create_record_view.xml
@@ -100,6 +100,7 @@
             <field name="arch" type="xml">
                 <xpath expr="/form/sheet/group/group/field[@name='partner_id']" position="after">
                     <field name="delivery_description"/>
+                    <field name = "generate_invoice" />
                 </xpath>
                 <xpath expr="/form/sheet/notebook/page/field[@name='move_ids_without_package']/tree/field[@name='product_id']" position="after">
                     <field name="weight_done_new" attrs="{'invisible':[('weight_done_new','=',False)]}"/>
@@ -222,6 +223,18 @@
                 </xpath>
             </field>
         </record>
+
+        <record id="inherited_stock_picking_type_form" model="ir.ui.view">
+            <field name="name">Stock Picking Type Form</field>
+            <field name="model">stock.picking.type</field>
+            <field name="inherit_id" ref="stock.view_picking_type_form"/>
+            <field name="arch" type="xml">
+                <xpath expr="/form/sheet/group/group/field[@name='show_reserved']" position="after">
+                    <field name="generate_invoice"/>
+                </xpath>
+            </field>
+        </record>
+
 
 
 
