--- a/freight_management/views/freight_port.xml
+++ b/freight_management/views/freight_port.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <odoo>
+
+    <!-- port tree view -->
      <data>
 
         <record id="freight_port_tree_view" model="ir.ui.view">
@@ -13,6 +15,7 @@
             </field>
         </record>
 
+    <!-- port form view -->
         <record id="freight_port_form_view" model="ir.ui.view">
             <field name="name">Port</field>
             <field name="model">freight.port</field>
@@ -38,6 +41,7 @@
             </field>
         </record>
 
+    <!-- port filter in search -->
         <record id="view_freight_port_filter" model="ir.ui.view">
             <field name="name">freight.port.search</field>
             <field name="model">freight.port</field>
@@ -48,6 +52,7 @@
              </field>
          </record>
 
+    <!-- port action -->
         <record id="action_freight_port" model="ir.actions.act_window">
             <field name="name">Freight Port</field>
             <field name="type">ir.actions.act_window</field>
