--- a/freight_management/views/freight_price_view.xml
+++ b/freight_management/views/freight_price_view.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <odoo>
 
-<record id="freight_price_tree_view" model="ir.ui.view">
+    <!-- pricelist tree view -->
+    <record id="freight_price_tree_view" model="ir.ui.view">
             <field name="name">Price</field>
             <field name="model">freight.price</field>
             <field name="arch" type="xml">
@@ -13,6 +14,7 @@
             </field>
         </record>
 
+    <!-- pricelist form view -->
         <record id="freight_price_form_view" model="ir.ui.view">
             <field name="name">Price</field>
             <field name="model">freight.price</field>
@@ -35,6 +37,7 @@
             </field>
         </record>
 
+    <!-- pricelist action -->
         <record id="action_freight_price" model="ir.actions.act_window">
             <field name="name">Freight Price</field>
             <field name="type">ir.actions.act_window</field>
