--- a/freight_management/views/freight_service_view.xml
+++ b/freight_management/views/freight_service_view.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <odoo>
+    <!-- service tree view -->
     <record id="freight_service_tree_view" model="ir.ui.view">
             <field name="name">Service</field>
             <field name="model">freight.service</field>
@@ -12,6 +13,7 @@
             </field>
         </record>
 
+    <!-- service form view -->
         <record id="freight_Service_form_view" model="ir.ui.view">
             <field name="name">Service</field>
             <field name="model">freight.service</field>
@@ -41,6 +43,7 @@
             </field>
         </record>
 
+        <!-- service action -->
         <record id="action_service_freight" model="ir.actions.act_window">
             <field name="name">Freight Service</field>
             <field name="type">ir.actions.act_window</field>
