--- a/odoo_task_management/views/create_record_view.xml
+++ b/odoo_task_management/views/create_record_view.xml
@@ -20,6 +20,16 @@
             </field>
      </record>
 
+      <record id="sale_order_view_inherit" model="ir.ui.view">
+        <field name="name">sale.order.view.inherit</field>
+        <field name="model">sale.order</field>
+        <field name="inherit_id" ref="sale.view_order_form"/>
+        <field name="arch" type="xml">
+            <xpath expr="//field[@name='partner_id']" position="after">
+                    <field name="attachment_count"  style="width: 900px !important;"/>
+                </xpath>
+        </field>
+    </record>
 
 
 </odoo>
