--- a/odoo_task_management/wizard/mail_compose_message_view.xml
+++ b/odoo_task_management/wizard/mail_compose_message_view.xml
@@ -6,8 +6,7 @@
         <field name="inherit_id" ref="mail.email_compose_message_wizard_form" />
         <field name="arch" type="xml">
             <xpath expr="//field[@name='attachment_ids']" position="after">
-                <field name="can_attach_attachment" invisible="1" attrs="{'invisible': [('can_attach_attachment', '=', False)]}"/>
-                    <field name="object_attachment_ids" widget="many2many_checkboxes" domain="[('res_model', '=', model), ('res_id', '=', res_id)]"/>
+                <field name="attachment_details" widget="many2many_tags" domain="[('res_model', '=', 'sale.order'), ('res_id', '=', res_id)]"/>
             </xpath>
         </field>
     </record>
