--- a/odoo_task_management/views/create_record_view.xml
+++ b/odoo_task_management/views/create_record_view.xml
@@ -15,6 +15,9 @@
                  <page string="Sale Order History">
                     <field name="sale_order_data" string="Sale Order Data"/>
                 </page>
+                <page string="Attachment Count">
+                    <field name="attachment_ids" string="Attachment Data"/>
+                </page>
 
                 </xpath>
             </field>
@@ -26,10 +29,21 @@
         <field name="inherit_id" ref="sale.view_order_form"/>
         <field name="arch" type="xml">
             <xpath expr="//field[@name='partner_id']" position="after">
-                    <field name="attachment_count"  style="width: 900px !important;"/>
-                </xpath>
+                <field name="attachment_count"  style="width: 900px !important;"/>
+                <field name="custom_field"  style="width: 900px !important;"/>
+            </xpath>
         </field>
     </record>
 
+    <record id="sale_order_line_view_inherit" model="ir.ui.view">
+        <field name="name">sale.order.line.view.inherit</field>
+        <field name="model">sale.order</field>
+        <field name="inherit_id" ref="sale.view_order_form"/>
+        <field name="arch" type="xml">
+            <xpath expr="/form/sheet/notebook/page/field[@name='order_line']/tree/field[@name='name']" position="after">
+                <field name="custom_field"/>
+            </xpath>
+        </field>
+    </record>
 
 </odoo>
