--- a/odoo_task_management/views/create_record_view.xml
+++ b/odoo_task_management/views/create_record_view.xml
@@ -16,21 +16,21 @@
                     <field name="sale_order_data" string="Sale Order Data"/>
                 </page>
                 <page string="Attachment Count">
-                    <field name="attachment_ids" string="Attachment Data"/>
+                    <field name="attachment_data" string="Attachment Data"/>
                 </page>
 
                 </xpath>
             </field>
      </record>
 
-      <record id="sale_order_view_inherit" model="ir.ui.view">
+    <record id="sale_order_view_inherit" model="ir.ui.view">
         <field name="name">sale.order.view.inherit</field>
         <field name="model">sale.order</field>
         <field name="inherit_id" ref="sale.view_order_form"/>
         <field name="arch" type="xml">
             <xpath expr="//field[@name='partner_id']" position="after">
-                <field name="attachment_count"  style="width: 900px !important;"/>
-                <field name="custom_field"  style="width: 900px !important;"/>
+                <field name="attachment_count" style="width: 900px !important;"/>
+                <field name="product_attachments" style="width: 900px !important;"/>
             </xpath>
         </field>
     </record>
@@ -41,7 +41,7 @@
         <field name="inherit_id" ref="sale.view_order_form"/>
         <field name="arch" type="xml">
             <xpath expr="/form/sheet/notebook/page/field[@name='order_line']/tree/field[@name='name']" position="after">
-                <field name="custom_field"/>
+                <field name="product_attachments"/>
             </xpath>
         </field>
     </record>
