--- a/odoo_task_management/wizard/mail_compose_message_view.xml
+++ b/odoo_task_management/wizard/mail_compose_message_view.xml
@@ -7,7 +7,7 @@
         <field name="arch" type="xml">
             <xpath expr="//field[@name='attachment_ids']" position="after">
                  <field name="attachment_details" widget="many2many_tags" domain="[('res_model', '=', model), ('res_id', '=', res_id)]"/>
-                <field name="order_line_many2many" widget="many2many_tags" domain="[('res_model', '=', 'product.product')]" />
+                  <field name="attachment_product" widget="many2many_tags" domain="[('res_model', '=', 'product.product'), ('res_id', '=', res_id)]"/>
             </xpath>
         </field>
     </record>
