--- a/connector_clickup_skeleton/connector_clickup/views/connector_clickup_backend_view.xml
+++ b/connector_clickup_skeleton/connector_clickup/views/connector_clickup_backend_view.xml
@@ -7,58 +7,87 @@
             <form string="Clickup Backend">
                 <sheet>
                     <group>
-                             <field
+                        <field
                             name="name"
                             placeholder="Ex:-Test 1"
                             style="font-size:13pt;"
                         />
-                            <field name="api_key" />
-                            <field name="uri" />
-                        </group>
-                        <footer>
-                            <button
-                            class="oe_highlight"
-                            name="import_projects"
-                            string="Import Projects"
-                            style="margin-right:10px;"
-                            type="object"
-                        />
-                            <button
-                            class="oe_highlight"
-                            name="import_stages"
-                            string="Import Stages"
-                            style="margin-right:10px;"
-                            type="object"
-                        />
-                            <button
-                            class="oe_highlight"
-                            name="import_tasks"
-                            string="Import Tasks"
-                            style="margin-right:10px;"
-                            type="object"
-                        />
-                        </footer>
-                        <notebook>
-                            <page string="Basic Information">
+                        <field name="api_key" />
+                        <field name="uri" />
+                    </group>
+                    <notebook>
+                        <page string="Basic Information">
+                            <group>
+                                <span>
+                                    <b
+                                    >1) You need API Token as well as Endpoint Location ID(Folder_id) in order to successfully import Projects, Tasks and Stages from ClickUp Project Management.
+                                        <br />
+                                        <br />
+                                        2) If you are Importing first time from Connector ClickUp, you need to First Import Projects then Stages and Lastly Tasks.
+                                        <br />
+                                        <br />
+                                        3) If you made changes only in tasks in ClickUp project management you can directly import tasks in order to update that specific task's data.
+                                        <br />
+                                        <br />
+                                        4) This module uses binding terminology to import projects, tasks and stages from ClickUp project management so you can not directly delete any of these data from Project module without deleting it from it's co-responsible binding models.
+                                        <br /></b>
+                                </span>
+                            </group>
+                        </page>
+                        <page string="Import">
+                            <group>
                                 <group>
-                                    <span><b>
-                                    1) You need API Token as well as Endpoint Location ID(Folder_id) in order to successfully import Projects, Tasks and Stages from ClickUp Project Management.<br
-                                        /><br />
-                                    2) If you are Importing first time from Connector ClickUp, you need to First Import Projects then Stages and Lastly Tasks.<br
-                                        /><br />
-                                    3) If you made changes only in tasks in ClickUp project management you can directly import tasks in order to update that specific task's data.<br
-                                        /><br />
-                                    4) This module uses binding terminology to import projects, tasks and stages from ClickUp project management so you can not directly delete any of these data from Project module without deleting it from it's co-responsible binding models.<br
-                                        /></b>
-                                    </span>
-                                </group>
-                            </page>
-                        </notebook>
+                                <span><b>Click to Import Projects of ClickUp</b></span>
+                                <button
+                                        class="oe_highlight"
+                                        name="import_projects"
+                                        string="Import Projects"
+                                        style=" width: 150px; height: 30px;"
+                                        type="object"
+                                    />
+                            </group>
+                            <br />
+                            <group>
+                                <span><b>Click to Import Stages of ClickUp</b></span>
+                                <button
+                                        class="oe_highlight"
+                                        name="import_stages"
+                                        string="Import Stages"
+                                        style=" width: 150px; height: 30px;"
+                                        type="object"
+                                    />
+                            </group>
+                            <br />
+                            <group>
+                                <span><b>Click to Import Tasks of ClickUp</b></span>
+                                <button
+                                        class="oe_highlight"
+                                        name="import_tasks"
+                                        string="Import Tasks"
+                                        style=" width: 150px; height: 30px;"
+                                        type="object"
+                                    />
+                            </group>
+                        </group>
+                        </page>
+                        <page string="Export">
+                            <group>
+                                <span><b
+                                    >Click to Export Projects In ClickUp remote</b></span>
+                                <button
+                                    class="oe_highlight"
+                                    name="export_projects"
+                                    string="Export Projects"
+                                    style=" width: 150px; height: 30px;"
+                                    type="object"
+                                />
+                            </group>
+                        </page>
+                    </notebook>
                 </sheet>
             </form>
         </field>
     </record>
-
     <record id="view_clickup_backend_tree" model="ir.ui.view">
         <field name="name">clickup.backend.tree</field>
         <field name="model">clickup.backend</field>
@@ -69,27 +98,22 @@
             </tree>
         </field>
     </record>
-
     <record id="action_clickup_backend" model="ir.actions.act_window">
         <field name="name">Clickup Backend</field>
         <field name="res_model">clickup.backend</field>
         <field name="view_mode">tree,form</field>
         <field name="view_id" ref="view_clickup_backend_tree" />
     </record>
-
-
-       <menuitem
+    <menuitem
         id="menu_clickup_root"
-        parent="connector.menu_connector_root"
         name="Clickup"
+        parent="connector.menu_connector_root"
     />
-
-        <menuitem
+    <menuitem
+        action="action_clickup_backend"
         id="menu_clickup_backend"
         name="Backends"
-        sequence="2"
         parent="menu_clickup_root"
-        action="action_clickup_backend"
+        sequence="2"
     />
-
 </odoo>
