[WIP][T6268]connector_clickup-Work on task and project export-BAD-PAA

--- a/connector_clickup_skeleton/connector_clickup/views/connector_clickup_backend_view.xml
+++ b/connector_clickup_skeleton/connector_clickup/views/connector_clickup_backend_view.xml
@@ -82,6 +82,18 @@
                                     type="object"
                                 />
                             </group>
+                            <br />
+                            <group>
+                                <span><b
+                                    >Click to Export Tasks In ClickUp remote</b></span>
+                                <button
+                                    class="oe_highlight"
+                                    name="export_tasks"
+                                    string="Export Tasks"
+                                    style=" width: 150px; height: 30px;"
+                                    type="object"
+                                />
+                            </group>
                         </page>
                     </notebook>
                 </sheet>
