[WIP][T6268]connector_clickup-Complete the export of project from odoo to clickup remote-BAD-PAA

--- a/connector_clickup_skeleton/connector_clickup/views/inherited_project_module_view.xml
+++ b/connector_clickup_skeleton/connector_clickup/views/inherited_project_module_view.xml
@@ -38,6 +38,7 @@
                     <field invisible="1" name="clickup_bind_ids" />
                     <group>
                         <field name="external_id" />
+                        <field name="folder_id" />
                         <field name="backend_id" />
                         <field name="api_token_data" />
                         <field name="created_at" />
