--- a/connector_clickup/views/connector_clickup_backend_view.xml
+++ b/connector_clickup/views/connector_clickup_backend_view.xml
@@ -38,6 +38,7 @@
                     />
                     <group>
                         <field name="name" placeholder="Ex:-Test 1" style="font-size:13pt;"/>
+                        <field name="auth_type"/>
                         <field name="api_key" attrs="{'invisible': [('test_mode', '=', True)]}"/>
                         <field name="uri" attrs="{'invisible': [('test_mode', '=', True)]}"/>
                         <field name="test_token"  attrs="{'invisible': [('test_mode', '=', False)]}"/>
@@ -82,6 +83,20 @@
                             </span>
                             <button class="oe_highlight" name="import_tasks" string="Import Tasks" type="object"/>
                             <group/>
+                        </page>
+                        <page string="Advance Configuration">
+                            <span style="margin-right: 10px;">
+                                <b>Limit</b>
+                            </span>
+                                <field name="limit"/>
+                                <group/>
+                                <br/>
+                             <span style="margin-right: 10px;">
+                                <b>Date Time Filter</b>
+                            </span>
+                                <field name="datetime_filter"/>
+                                <group/>
+
                         </page>
                         <page string="Export">
                             <span style="margin-right: 10px;">
