--- a/connector_clickup/views/connector_clickup_backend_view.xml
+++ b/connector_clickup/views/connector_clickup_backend_view.xml
@@ -6,97 +6,87 @@
         <field name="arch" type="xml">
             <form string="Clickup Backend">
                 <sheet>
-                    <div name="button_box" class="oe_button_box">
-                        <button
-                            class="oe_stat_button"
-                            name="toggle_test_mode"
-                            type="object"
-                            icon="fa-play"
-                        >
-                            <field name="test_mode" invisible="1" />
-                            <span
-                                class="o_stat_text text-success"
-                                attrs="{'invisible': [('test_mode', '=', True)]}"
-                            >Production</span>
-                            <span
-                                class="o_stat_text text-warning"
-                                attrs="{'invisible': [('test_mode', '=', False)]}"
-                            >Test</span>
+                    <div class="oe_button_box" name="button_box">
+                        <button class="oe_stat_button" icon="fa-play" name="toggle_test_mode" type="object">
+                            <field invisible="1" name="test_mode"/>
+                            <span attrs="{'invisible': [('test_mode', '=', True)]}" class="o_stat_text text-success">Production</span>
+                            <span attrs="{'invisible': [('test_mode', '=', False)]}" class="o_stat_text text-warning">Test</span>
                         </button>
                     </div>
-                    <widget
-                        name="web_ribbon"
-                        title="Test Mode"
-                        bg_color="bg-warning"
-                        attrs="{'invisible': [('test_mode', '=', False)]}"
-                    />
-                    <widget
-                        name="web_ribbon"
-                        title="Production"
-                        bg_color="bg-success"
-                        attrs="{'invisible': [('test_mode', '=', True)]}"
-                    />
+                    <widget attrs="{'invisible': [('test_mode', '=', False)]}" bg_color="bg-warning" name="web_ribbon" title="Test Mode"/>
+                    <widget attrs="{'invisible': [('test_mode', '=', True)]}" bg_color="bg-success" name="web_ribbon" title="Production"/>
                     <group>
                         <field name="name" placeholder="Ex:-Test 1" style="font-size:13pt;"/>
                         <field name="auth_type"/>
-                        <field name="api_key" attrs="{'invisible': [('test_mode', '=', True)]}"/>
-                        <field name="uri" attrs="{'invisible': [('test_mode', '=', True)]}"/>
-                        <field name="test_token"  attrs="{'invisible': [('test_mode', '=', False)]}"/>
-                        <field name="test_location"  attrs="{'invisible': [('test_mode', '=', False)]}"/>
+                        <field attrs="{'invisible': [('test_mode', '=', True)]}" name="api_key"/>
+                        <field attrs="{'invisible': [('test_mode', '=', True)]}" name="uri"/>
+                        <field attrs="{'invisible': [('test_mode', '=', False)]}" name="test_token"/>
+                        <field attrs="{'invisible': [('test_mode', '=', False)]}" name="test_location"/>
+                        <field attrs="{'invisible': [('auth_type', '=', 'api_key')]}" name="client_id"/>
+                        <field attrs="{'invisible': [('auth_type', '=', 'api_key')]}" name="client_secret"/>
 
+                        <!-- {'invisible':['|',('filed_name_1','=',False),('fieled_name_2','=',False)]} -->
                     </group>
                     <notebook>
                         <page string="Basic Information">
                             <span>
                                 <b>1) You need API Token as well as Endpoint Location ID(Folder_id) in order to successfully import Projects, Tasks and Stages from ClickUp Project Management.
 
+
                                     <br/>
                                     <br/>
                                     2) If you are Importing first time from Connector ClickUp, you need to First Import Projects then Stages and Lastly Tasks.
+
 
                                     <br/>
                                     <br/>
                                     3) If you made changes only in tasks in ClickUp project management you can directly import tasks in order to update that specific task's data.
 
+
                                     <br/>
                                     <br/>
                                     4) This module uses binding terminology to import projects, tasks and stages from ClickUp project management so you can not directly delete any of these data from Project module without deleting it from it's co-responsible binding models.
+
 
                                     <br/></b>
                             </span>
                         </page>
                         <page string="Import">
-                            <span  style="margin-right: 10px;">
+                            <span style="margin-right: 10px;">
                                 <b>Click to Import Projects of ClickUp</b>
                             </span>
                             <button class="oe_highlight" name="import_projects" string="Import Projects" type="object"/>
+                            <group>
+                                <field name="force_update_projects"/>
+                            </group>
                             <group/>
                             <br/>
                             <span style="margin-right: 19px; ">
                                 <b>Click to Import Stages of ClickUp</b>
                             </span>
-                            <button class="oe_highlight" name="import_stages" string="Import Stages" type="object" />
+                            <button class="oe_highlight" name="import_stages" string="Import Stages" type="object"/>
+                            <group>
+                                <field name="force_update_stages"/>
+                            </group>
                             <group/>
                             <br/>
                             <span style="margin-right: 27px;">
                                 <b>Click to Import Tasks of ClickUp</b>
                             </span>
                             <button class="oe_highlight" name="import_tasks" string="Import Tasks" type="object"/>
+                            <group>
+                                <field name="force_update_tasks"/>
+                            </group>
                             <group/>
                         </page>
                         <page string="Advance Configuration">
-                            <span style="margin-right: 10px;">
-                                <b>Limit</b>
-                            </span>
+                            <group>
+                                <group>
+                                <field name="datetime_filter_project"/>
+                                <field name="datetime_filter_task"/>
                                 <field name="limit"/>
-                                <group/>
-                                <br/>
-                             <span style="margin-right: 10px;">
-                                <b>Date Time Filter</b>
-                            </span>
-                                <field name="datetime_filter"/>
-                                <group/>
-
+                            </group>
+                            </group>
                         </page>
                         <page string="Export">
                             <span style="margin-right: 10px;">
