--- a/connector_clickup/views/connector_clickup_backend_view.xml
+++ b/connector_clickup/views/connector_clickup_backend_view.xml
@@ -5,6 +5,14 @@
         <field name="model">clickup.backend</field>
         <field name="arch" type="xml">
             <form string="Clickup Backend">
+                <header>
+                    <button
+                        name="generate_token"
+                        type="object"
+                        class="oe_highlight"
+                        string="Generate Token"
+                    />
+                </header>
                 <sheet>
                     <div class="oe_button_box" name="button_box">
                         <button class="oe_stat_button" icon="fa-play" name="toggle_test_mode" type="object">
@@ -16,7 +24,7 @@
                     <widget attrs="{'invisible': [('test_mode', '=', False)]}" bg_color="bg-warning" name="web_ribbon" title="Test Mode"/>
                     <widget attrs="{'invisible': [('test_mode', '=', True)]}" bg_color="bg-success" name="web_ribbon" title="Production"/>
                     <group>
-                        <field name="name" placeholder="Ex:-Test 1" style="font-size:13pt;"/>
+                        <field name="name" placeholder="Ex:-Test 1" style="font-size:13pt;" />
                         <field name="auth_type"/>
                         <field attrs="{'invisible': [('test_mode', '=', True)]}" name="api_key"/>
                         <field attrs="{'invisible': [('test_mode', '=', True)]}" name="uri"/>
